<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TP1_memoryGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnTwoPlayers_text">Play with other</string>
    <string name="btnWithRobot_text">Play with Robot</string>
    <string name="btnScores_text">Best scores</string>
    <string name="btnExit_text">Exit</string>
    <string name="userNameText1">Name of User1:</string>
    <string name="userNameText2">Name of User2:</string>
    <string name="name_text">name</string>
    <string name="gameStart_text">Start</string>
    <string name="title_userSettingActivity">Players</string>
    <string name="score_Text">Score:</string>
    <string name="player_name">name</string>
    <string name="onePlayerName">One player:</string>
    <string name="anotherPlayerName">Another player:</string>
    <string name="score">score</string>
    <string name="ok">OK</string>

    <string-array name="finish_game">
        <item>Try again</item>
        <item>Change game mode</item>
        <item>Exit</item>
    </string-array>

</resources>
