<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/room"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/playerNameTextView1"
        android:textSize="25dp"
        android:text="@string/onePlayerName"/>
    <EditText
        android:id="@+id/playerOne"
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/player_name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/playerNameTextView2"
        android:textSize="25dp"
        android:text="@string/anotherPlayerName"
        android:paddingTop="40dp"/>
    <EditText
        android:id="@+id/PlayerTwo"
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/player_name" />
    <Button
        android:id="@+id/btnGameStart"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_img"
        android:text="@string/ok"/>

</LinearLayout>
