<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:id="@+id/user_settingTableLayout">
    <TableRow
        android:id="@+id/userTableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/userNameTextView1"
            android:text="@string/userNameText1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/nameEditText1"
            android:imeOptions="actionNext"
            android:hint="@string/name_text"/>
    </TableRow>
    <TableRow
        android:id="@+id/userTableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/userNameTextView2"
            android:text="@string/userNameText2"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/nameEditText2"
            android:imeOptions="actionDone"
            android:hint="@string/name_text"/>
    </TableRow>
    <TableRow
        android:id="@+id/rowGameStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/btnGameStart"
            android:text="@string/gameStart_text"
            android:layout_span="2"
            android:gravity="center"/>

    </TableRow>
</TableLayout>
</RelativeLayout>