<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/room"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/gameBtnLinearLayout">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/btnTwoPlayers"
            android:text="@string/btnTwoPlayers_text"
            android:layout_margin="40dp"
            android:layout_weight="2"
            android:background="@drawable/button_img"
            android:textStyle="bold"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/btnWithRobot"
            android:layout_margin="40dp"
            android:layout_weight="2"
            android:background="@drawable/button_img"
            android:text="@string/btnWithRobot_text"
            android:textStyle="bold"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/btnScores"
            android:layout_margin="40dp"
            android:layout_weight="2"
            android:background="@drawable/button_img"
            android:textStyle="bold"
            android:text="@string/btnScores_text"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/btnExit"
            android:layout_margin="40dp"
            android:layout_weight="2"
            android:background="@drawable/button_img"
            android:textStyle="bold"
            android:text="@string/btnExit_text"/>
        </LinearLayout>

</RelativeLayout>
